# python-bibref-parser

./: LICENSE  README.md  pyproject.toml
bibref_parser/: parser.py
bibref_parser/tests/: test_bibref_parser.py  test_dataset.csv
