[tool.poetry]
name = "bibref-parser"
version = "0.1.0"
description = "A naive parser for bibliographic references"
authors = ["geoffroy-noel-ddh <geoffroy.noel@kcl.ac.uk>"]
packages = [
  {include = "bibref_parser"}
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
